sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/Tele_EC_Escalation_Status__c.object-meta.xml
<CustomObject>
    <label>Tele-EC Escalation Status</label>
    <nameField>
        <displayFormat>tuces-{000000}</displayFormat>
        <label>Tele-EC Escalation Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tele-EC Escalation Statuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>