sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Current_Day__c.field-meta.xml
<CustomField>
    <fullName>TUC_Current_Day__c</fullName>
    <description>Displays the created date.</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Day</label>
    <type>Date</type>
</CustomField>