sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Original_Pause_Record__c.field-meta.xml
<CustomField>
    <fullName>TUC_Original_Pause_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self lookup to Tele-EC Escalation Status</description>
    <label>Original Pause Record</label>
    <referenceTo>Tele_EC_Escalation_Status__c</referenceTo>
    <relationshipLabel>Tele-EC Escalation Statuses</relationshipLabel>
    <relationshipName>TUC_Original_Pause_Records</relationshipName>
    <type>Lookup</type>
</CustomField>