sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>TUC_Pause_Reason__c</fullName>
    <description>This field is meant to help understand reasons the Tele-EC is placed on pause and realize any underlying trends.</description>
    <inlineHelpText>This field is meant to help understand reasons the Tele-EC is placed on pause and realize any underlying trends.</inlineHelpText>
    <label>Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider unavailable- service at capacity</fullName>
            </value>
            <value>
                <fullName>Provider unavailable- on break</fullName>
            </value>
            <value>
                <fullName>Tele-EC closed (after hours)</fullName>
            </value>
            <value>
                <fullName>Technical issue (i.e, power outage, wifi)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>