sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>TUC_Queue_Type__c</fullName>
    <description>Used in TUC_CommonUtils apex class. Determines which type of queue the status record is being created for.</description>
    <label>Queue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Acuity</fullName>
            </value>
            <value>
                <fullName>Intermediate Acuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>