sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Status_Datetime__c.field-meta.xml
<CustomField>
    <fullName>TUC_Status_Datetime__c</fullName>
    <description>Used in tucCommonUtils apex class. Used to capture the status date/time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>