sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>TUC_Status_Type__c</fullName>
    <description>Used in tucCommonUtils apex class. Determines if the status is paused or resumed</description>
    <label>Status Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Resumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>