sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/fields/TUC_VISN__c.field-meta.xml
<CustomField>
    <fullName>TUC_VISN__c</fullName>
    <description>Used in tucCommonUtils apex class. Used to capture the VISN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>