sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TUC_Original_Pause_Record__c</columns>
    <columns>TUC_Is_Current_Status__c</columns>
    <columns>TUC_Pause_Duration__c</columns>
    <columns>TUC_VISN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>TUC_Status_Type__c</columns>
    <columns>TUC_Status_Datetime__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>