sfdx-source/main/default/objects/Tele_EC_Escalation_Status__c/listViews/VISN_22_Escalation_Status_Board.listView-meta.xml
<ListView>
    <fullName>VISN_22_Escalation_Status_Board</fullName>
    <columns>NAME</columns>
    <columns>TUC_Pause_Duration__c</columns>
    <columns>TUC_Status_Datetime__c</columns>
    <columns>TUC_Is_Current_Status__c</columns>
    <columns>TUC_Status_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TUC_VISN__c</field>
        <operation>equals</operation>
        <value>22</value>
    </filters>
    <label>VISN 22 Escalation Status Board</label>
    <sharedTo>
        <group>TUC_22_Desert_Pacific</group>
    </sharedTo>
</ListView>